# API-algorithmes-traitement-de-maillage-pour-Blender

./: CMakeLists.txt  README.md  install_pymeshlab.py  setup.bash
api_traitements_maillage/: api_traitements_maillage.py  config.json
api_traitements_maillage/api_modules/: __init__.py  py_mesh.py
src/: Algorithm.cpp  Algorithm.hpp  MeshLab.cpp  MeshLab.hpp  Router.cpp  Router.hpp  SurfaceAreaComputation.cpp  SurfaceAreaComputation.hpp  SurfaceMeshSegmentation.cpp  SurfaceMeshSegmentation.hpp  SurfaceMeshSimplification.cpp  SurfaceMeshSimplification.hpp  TestCpp.cpp  TestCpp.hpp
